# ClinicSandbox

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 26be95c04c6c_add_audit_logs_table.py  3e5343313777_initial_tables.py  726f1ece3679_add_registry_columns.py  eca045ee9ce2_encrypt_fhir_column.py  fac1df5690e9_add_audit_logs_table.py
scripts/: start-api.sh  webhook_listener.py
src/: main.py
src/api/: router.py
src/api/endpoints/: jobs.py
src/core/: config.py  logging.py  security.py  vm_factory.py
src/db/: models.py  session.py  types.py
src/schemas/: job.py  manifest.py
src/services/: audit.py  decision_engine.py  queue.py  webhook.py
src/services/virtualization/: base.py  firecracker.py  mock.py
src/worker/: main.py
tests/: conftest.py
tests/integration/: test_audit_flow.py  test_worker_flow.py
tests/unit/: test_api.py  test_audit.py  test_decision_engine.py  test_webhook.py
